--- a/lib/android/app/build.gradle
+++ b/lib/android/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.library'
-apply from: '../prepare-robolectric.gradle'
+//apply from: '../prepare-robolectric.gradle'
 
 def safeExtGet(prop, fallback) {
     rootProject.ext.has(prop) ? rootProject.ext.get(prop) : fallback
 }
 
-def DEFAULT_COMPILE_SDK_VERSION = 27
+def DEFAULT_COMPILE_SDK_VERSION = 28
 def DEFAULT_MIN_SDK_VERSION = 19
-def DEFAULT_SUPPORT_LIB_VERSION = '27.1.1'
+def DEFAULT_SUPPORT_LIB_VERSION = '28.0.0'
 def DEFAULT_TARGET_SDK_VERSION = 25
 
 android {
@@ -32,6 +32,7 @@ android {
     }
 
     testOptions {
+        unitTests.includeAndroidResources = true
         unitTests.all { t ->
             reports {
                 html.enabled true
@@ -92,7 +93,7 @@ allprojects { p ->
 def supportLibVersion = safeExtGet('supportLibVersion', DEFAULT_SUPPORT_LIB_VERSION)
 
 dependencies {
-    implementation fileTree(include: ['*.jar'], dir: 'libs')
+//    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "com.android.support:design:${supportLibVersion}"
     implementation "com.android.support:appcompat-v7:${supportLibVersion}"
     implementation "com.android.support:support-v4:${supportLibVersion}"
@@ -107,8 +108,8 @@ dependencies {
 
     // tests
     testImplementation 'junit:junit:4.12'
-    testImplementation 'org.robolectric:robolectric:3.5.1'
+    testImplementation "org.robolectric:robolectric:4.3-beta-1"
     testImplementation 'org.assertj:assertj-core:3.8.0'
     testImplementation 'com.squareup.assertj:assertj-android:1.1.1'
-    testImplementation 'org.mockito:mockito-core:2.13.0'
+    testImplementation 'org.mockito:mockito-core:2.27.0'
 }
